2001-02-02  Keiichi Suzuki  <keiichi@nanap.org>

	* mu-cite.el (top level): Require `poem' instead of `poe' for
	`char-next-index'.

2000-09-04  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mu-cite.el (mu-cite-default-methods-alist): Don't include
	`ml-count' in `id' if it is not available.

2000-05-25  Tanaka Akira      <akr@m17n.org>

	* README.en: Update for CVS via SSH.

2000-01-05  Katsumi Yamaoka   <yamaoka@jpl.org>

	* Makefile: Update for the new CVS server.


1999-12-16  Katsumi Yamaoka   <yamaoka@jpl.org>

	* MU-CITE: Version 8.1 was released.

1999-12-16  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mu-register.el: Ignore the obsolete variables.

	* mu-cite.el: Ignore the obsolete variables and functions.

1999-12-13  Katsumi Yamaoka   <yamaoka@jpl.org>

	* README.en: Update for the recent ML address.

1999-10-19  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mu-cite.el (fill-cited-region): Bind `filladapt-mode' to nil.

1999-10-15  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mu-cite.el (fill-cited-region): Increase `fill-column' if
	`fill-prefix' is too long to fill.
	(detect-paragraph-cited-prefix): Abolish a product of comparing
	each line if they are identical; don't include newlines in result.

1999-08-23  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mu-cite.el (TopLevel): Don't require `widget'.


1999-08-05  Katsumi Yamaoka   <yamaoka@jpl.org>

	* MU-CITE: Version 8.0 was released.

1999-08-05  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mu-cite.el (detect-paragraph-cited-prefix): Use `car' and `cdr'
	instead of `cadr'.

	* mu-register.el (mu-cite-save-registration-file): Remove text
	properties from the strings to be registered and quote them using
	`prin1-to-string'.

	* Makefile (PACKAGE): Rename from "mu" to "mu-cite".
	(invoice): New target.

1999-08-03  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mu-register.el (mu-cite-get-prefix-register-verbose-method): Bind
	`minibuffer-allow-text-properties' to nil; use
	`mu-cite-remove-text-properties'; use `if' instead of `when'.